--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs: # we now have TWO jobs, so that a workflow can coordinate them!
       - checkout # this pulls code down from GitHub
       - run: echo "A first hello" # This prints "A first hello" to stdout.
       - run: mkdir -p arpitTesting
-      - run: echo "testing job1" > project/arpitTesting/output
+      - run: echo "testing job1" > arpitTesting/output
       - persist_to_workspace:
              root: arpitTesting
              path: output
