--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ jobs: # we now have TWO jobs, so that a workflow can coordinate them!
       - run: echo "testing job1" > arpitTesting/output
       - persist_to_workspace:
              root: arpitTesting
-             path: output
+             path: 
+              - output
       - run: sleep 25 # a command telling the job to "sleep" for 25 seconds.
   two: # This is our second job.
     docker: # it runs inside a docker image, the same as above.
